--- a/src/main/assets/www/common/team_add.html
+++ b/src/main/assets/www/common/team_add.html
@@ -18,8 +18,14 @@
 <script>
     cobalt.init({
         debug: true,
-        debugInBrowser:true
+        //debugInBrowser:true
     });
+
+    cobalt.nativeBars.setActionVisible("team_list", false);
+    cobalt.nativeBars.setActionVisible("team_add", false);
+    cobalt.nativeBars.setBarContent({
+            "title": "Add a mate"
+        });
 
     var peoples = cobalt.storage.get('peoples');
     if (typeof peoples == 'undefined') { 
@@ -34,7 +40,7 @@
         cobalt.storage.set('peoples', peoples);
 
         //return back to main page
-        cobalt.navigate.dismiss();
+        cobalt.navigate.pop();
     }
 
 
