--- a/src/main/assets/www/common/team_add.html
+++ b/src/main/assets/www/common/team_add.html
@@ -15,6 +15,7 @@
 </div>
 
 <script type="text/javascript" src="../platform/cobalt.js"></script>
+<script type="text/javascript" src="app.js"></script>
 <script>
 
 
@@ -34,9 +35,14 @@
 
         function store(){
             var nameInput = document.getElementById('name');
+
+            
             //TODO check for valid input
+            app.save({ "name": nameInput.value});
+
+            
             //return back to main page
-            cobalt.navigate.pop({ action: "add", people: { name: nameInput.value}});
+            cobalt.navigate.pop();
         }
 
 
