--- a/src/main/assets/www/common/team_actions.html
+++ b/src/main/assets/www/common/team_actions.html
@@ -7,14 +7,16 @@
     <title>rename or delete team mate</title>
 </head>
 <body>
-
 <div>
-    <label for="name">
-        <input type="text" id="name"/><button id="ok">OK</button>
-    </label>
-    
+    <div class="divsep">
+        <label for="name"></label>
+        <input type="text" name="name" id="name"/><button id="ok">rename</button>
+    </div>
+    <div>
+        <button id="del" class="delete">delete</button>
+    </div>
 </div>
-<button id="del">delete</button>
+
 
 <script type="text/javascript" src="../platform/cobalt.js"></script>
 <script type="text/javascript" src="app.js"></script>
