--- a/app/src/main/assets/www/common/team_add.html
+++ b/app/src/main/assets/www/common/team_add.html
@@ -10,7 +10,7 @@
 
 <div>
     <label for="name">
-        <input type="text" id="name"/><button id="ok">OK</button>
+        <input type="text" id="name"/><!-- <button id="ok">OK</button> -->
     </label>
 </div>
 
@@ -26,11 +26,23 @@
             //debugInBrowser:true
         });
 
-        cobalt.nativeBars.setActionVisible("team_list", false);
-        cobalt.nativeBars.setActionVisible("team_add", false);
-        cobalt.nativeBars.setBarContent({
-                "title": "Add a mate"
-            });
+        // cobalt.nativeBars.setActionVisible("team_list", false);
+        // cobalt.nativeBars.setActionVisible("team_add", false);
+        // cobalt.nativeBars.setBarContent({
+        //         "title": "Add a mate"
+        //     });
+
+        cobalt.nativeBars.setEventListener(function (item, event) {
+            switch (item) {
+                case "add":
+                    store();
+                    break; 
+                default :
+                    cobalt.log('An unknown button has been pressed.');
+                    break;
+            }
+        });
+
 
 
         function store(){
