--- a/app/src/main/assets/www/common/team_actions.html
+++ b/app/src/main/assets/www/common/team_actions.html
@@ -10,11 +10,11 @@
 <div>
     <div class="divsep">
         <label for="name"></label>
-        <input type="text" name="name" id="name"/><button id="ok">rename</button>
+        <input type="text" name="name" id="name"/><!-- <button id="ok">rename</button> -->
     </div>
-    <div>
+   <!--  <div>
         <button id="del" class="delete">delete</button>
-    </div>
+    </div> -->
 </div>
 
 
@@ -32,11 +32,25 @@
         }
     });
 
-    cobalt.nativeBars.setActionVisible("team_list", false);
-    cobalt.nativeBars.setActionVisible("team_add", false);
-    cobalt.nativeBars.setBarContent({
-            "title": "Rename or delete a mate"
+    // cobalt.nativeBars.setActionVisible("team_list", false);
+    // cobalt.nativeBars.setActionVisible("team_add", false);
+    // cobalt.nativeBars.setBarContent({
+    //         "title": "Rename or delete a mate"
+    //     });
+     cobalt.nativeBars.setEventListener(function (item, event) {
+            switch (item) {
+                case "delete":
+                    remove();
+                    break;
+                case "rename":
+                    rename();
+                    break;   
+                default :
+                    cobalt.log('An unknown button has been pressed.');
+                    break;
+            }
         });
+
 
     var peoples, selectedItem;
 
@@ -78,8 +92,8 @@
 
 
 
-    document.getElementById('ok').addEventListener('click', rename);
-    document.getElementById('del').addEventListener('click', remove);
+    //document.getElementById('ok').addEventListener('click', rename);
+   // document.getElementById('del').addEventListener('click', remove);
 
 </script>
 </body>
